--- a/Map.html
+++ b/Map.html
@@ -29,11 +29,12 @@
 
 		
 		<!-- GeoJSON overlays -->
-
+		<script type="text/javascript" src="https://cmmitchell.github.io/Graveyard/Data/GraveSharp1.js"></script>
+		<script type="text/javascript" src="https://cmmitchell.github.io/Graveyard/Data/Local1.js"></script>
 		<script type="text/javascript" src="https://cmmitchell.github.io/Locations/Location/Shapefile/leaflet-bing-layer.js"></script>
 
 		<!-- Broken Stuff -->
-		
+		https://github.com/cmmitchell/Graveyard
 
 
 		
